# lamb

./: .gitignore  Cargo.toml  README.md  cabal.project  flake.nix  lamb.cabal  rust-toolchain.toml
lib/: Lamb.hs
samples/: README.md  sum.lamb
src/: ast.rs  lexer.rs  main.rs  parser.rs
