# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "lamb"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.0.0"
description = "Lamb language"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/lamb"
publish = false

[workspace.metadata.crane]
name = "lamb"

[dependencies]
chumsky = { version = "0.13.0", default-features = false, features = ["std", "pratt"] }
